-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u60
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8129591 | 8u60 | Anton Tarasov | P3 | Resolved | Fixed |
While testing today I got a crash on exit in the following method, when it was trying access a JNI function, possibly after the JVM had been detached.
C [libjfxwebkit.dylib+0x48e74d] JNIEnv_::CallVoidMethod(_jobject*, _jmethodID*, ...)+0x7d
C [libjfxwebkit.dylib+0xa4a7e8] WebCore::FrameData::clear(bool)+0x108
I was using WebLauncher to browse yahoo.com clicking on a few links and then clicking the window close button produced the crash.
The hs_err file and the OS X crash dump are attached.
C [libjfxwebkit.dylib+0x48e74d] JNIEnv_::CallVoidMethod(_jobject*, _jmethodID*, ...)+0x7d
C [libjfxwebkit.dylib+0xa4a7e8] WebCore::FrameData::clear(bool)+0x108
I was using WebLauncher to browse yahoo.com clicking on a few links and then clicking the window close button produced the crash.
The hs_err file and the OS X crash dump are attached.
- backported by
-
JDK-8129591 [Mac] intermittent crash on exit in WebView
-
- Resolved
-