8087932: [Mac] intermittent crash on exit in WebView

Reviewed-by: kcr